@@ -9,6 +9,8 @@ import a2geek.ghost.model.statement.*;
 
 import java.util.*;
 
+import static a2geek.ghost.model.Symbol.*;
+
 public class CodeGenerationVisitor extends Visitor {
     private Stack<Frame> frames = new Stack<>();
     private CodeBlock code = new CodeBlock();
@@ -47,7 +49,8 @@ public class CodeGenerationVisitor extends Visitor {
             var detachedScopesUsed = new HashSet<>(scopesUsed);
             for (String scopeName : detachedScopesUsed) {
                 if (!scopesProcessed.contains(scopeName)) {
-                    program.findLocalScope(scopeName).ifPresent(this::dispatch);
+                    program.findFirstLocalScope(named(scopeName).and(in(SymbolType.FUNCTION, SymbolType.SUBROUTINE)))
+                            .map(Symbol::scope).ifPresent(this::dispatch);
                     scopesProcessed.add(scopeName);
                     wroteCode = true;
                 }
@@ -59,7 +62,7 @@ public class CodeGenerationVisitor extends Visitor {
 
     public void setupDefaultArrayValues(Scope scope) {
         scope.getLocalSymbols().forEach(symbol -> {
-            if (symbol.defaultValues() == null || symbol.type() == Scope.Type.CONSTANT) {
+            if (symbol.defaultValues() == null || symbol.symbolType() == SymbolType.CONSTANT) {
                 return;
             }
             var dataType = symbol.dataType();
@@ -84,7 +87,7 @@ public class CodeGenerationVisitor extends Visitor {
                 code.emit(Opcode.LOADA, actual);
                 emitStore(symbol);
             } else {
-                throw new RuntimeException("unsupported symbol array with data type of " + dataType);
+                throw new RuntimeException("unsupported symbol array with data symbolType of " + dataType);
             }
         });
     }
@@ -121,12 +124,13 @@ public class CodeGenerationVisitor extends Visitor {
             return;
         }
         var symbol = var.getSymbol();
-        switch (symbol.type()) {
-            case LOCAL, PARAMETER, RETURN_VALUE -> {
-                this.code.emit(Opcode.LOCAL_LOAD, frameOffset(symbol));
-            }
-            case GLOBAL -> {
-                this.code.emit(Opcode.GLOBAL_LOAD, frameOffset(symbol));
+        switch (symbol.symbolType()) {
+            case VARIABLE, PARAMETER, RETURN_VALUE -> {
+                switch (symbol.declarationType()) {
+                    case LOCAL -> this.code.emit(Opcode.LOCAL_LOAD, frameOffset(symbol));
+                    case GLOBAL -> this.code.emit(Opcode.GLOBAL_LOAD, frameOffset(symbol));
+                    default -> throw new RuntimeException("expecting declaration symbolType but it was: " + symbol.declarationType());
+                }
             }
             case INTRINSIC -> {
                 switch (symbol.name().toLowerCase()) {
@@ -155,12 +159,13 @@ public class CodeGenerationVisitor extends Visitor {
             return;
         }
         var symbol = var.getSymbol();
-        switch (symbol.type()) {
-            case LOCAL, PARAMETER, RETURN_VALUE -> {
-                this.code.emit(Opcode.LOCAL_STORE, frameOffset(symbol));
-            }
-            case GLOBAL -> {
-                this.code.emit(Opcode.GLOBAL_STORE, frameOffset(symbol));
+        switch (symbol.symbolType()) {
+            case VARIABLE, PARAMETER, RETURN_VALUE -> {
+                switch (symbol.declarationType()) {
+                    case LOCAL -> this.code.emit(Opcode.LOCAL_STORE, frameOffset(symbol));
+                    case GLOBAL -> this.code.emit(Opcode.GLOBAL_STORE, frameOffset(symbol));
+                    default -> throw new RuntimeException("expecting declaration symbolType but it was: " + symbol.declarationType());
+                }
             }
             case INTRINSIC -> {
                 switch (symbol.name().toLowerCase()) {
@@ -271,7 +276,7 @@ public class CodeGenerationVisitor extends Visitor {
     public void visit(ReturnStatement statement, StatementContext context) {
         boolean hasReturnValue = statement.getExpr() != null;
         if (this.frames.peek().scope() instanceof Function f) {
-            var refs = this.frames.peek().scope().findByType(Scope.Type.RETURN_VALUE);
+            var refs = this.frames.peek().scope().findAllLocalScope(in(SymbolType.RETURN_VALUE));
             if (refs.size() == 1 && hasReturnValue) {
                 assignment(new VariableReference(refs.get(0)), statement.getExpr());
             } else if (refs.size() != 0 || hasReturnValue) {
@@ -290,18 +295,20 @@ public class CodeGenerationVisitor extends Visitor {
     @Override
     public void visit(CallSubroutine statement, StatementContext context) {
         // Using the "program" frame
-        var scope = frames.get(0).scope().findLocalScope(statement.getName())
+        var scope = frames.getFirst().scope()
+                .findFirstLocalScope(named(statement.getName()).and(in(SymbolType.SUBROUTINE)))
+                .map(Symbol::scope)
                 .orElseThrow(() -> new RuntimeException(statement.getName() + " not found"));
         if (scope instanceof Subroutine sub) {
             Map<Symbol,Expression> map = new HashMap<>();
             inlineVariables.push(map);
             if (sub.isInline()) {
-                var parameters = sub.findByType(Scope.Type.PARAMETER);
+                var parameters = sub.findAllLocalScope(in(SymbolType.PARAMETER));
                 if (parameters.size() != statement.getParameters().size()) {
                     throw new RuntimeException(String.format("parameter size mismatch for call to '%s'", statement.getName()));
                 }
                 // Subroutine parameters are REVERSED (for stack placement), so taking that into account:
-                Collections.reverse(parameters);
+                parameters = parameters.reversed();
                 for (int i=0; i<parameters.size(); i++) {
                     var param = parameters.get(i);
                     var value = statement.getParameters().get(i);
@@ -336,7 +343,7 @@ public class CodeGenerationVisitor extends Visitor {
             // We are already inlining this, so do not generate code.
             return;
         }
-        var hasLocalScope = subroutine.findByType(Scope.Type.PARAMETER, Scope.Type.LOCAL).size() != 0;
+        var hasLocalScope = subroutine.findAllLocalScope(is(DeclarationType.LOCAL).and(in(SymbolType.VARIABLE, SymbolType.PARAMETER))).size() != 0;
         var frame = frames.push(Frame.create(subroutine));
         code.emit(subroutine.getName());
         if (hasLocalScope) code.emit(Opcode.LOCAL_RESERVE, frame.localSize());
@@ -351,7 +358,7 @@ public class CodeGenerationVisitor extends Visitor {
 
     @Override
     public void visit(Function function) {
-        var hasLocalScope = function.findByType(Scope.Type.PARAMETER, Scope.Type.LOCAL).size() != 0;
+        var hasLocalScope = function.findAllLocalScope(is(DeclarationType.LOCAL).and(in(SymbolType.VARIABLE, SymbolType.PARAMETER))).size() != 0;
         var frame = frames.push(Frame.create(function));
         var labels = label("FUNCXIT");
         var exitLabel = labels.get(0);
